--- a/borntofish/CSS/style.css
+++ b/borntofish/CSS/style.css
@@ -113,6 +113,34 @@ footer{
 }
 
 
+@media screen and (max-width: 426px) {
+    h1{
+        font-size: 1.8em;
+    }
+    h2{
+        font-size: 1.3em;
+    }
+    p{
+        font-size: 0.9em;
+    }
+    #logoimage{
+        width: 60px;
+        height: 60px;
+    }
+    header{
+        height: 80px;
+    }
+
+    .contact{
+        width: 220px;
+    }
+
+    .contact,p{
+        margin-left: 10px;
+    }
+  }
+
+
 
 
 .carousel-container {
